K1J-1777: Add CertificateMessageCount model and repository for counting messages per certificate